sumo/tests/sumo/extended/vaporizer/errors/end_negative/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: A vaporization ends before it starts (edge id='middle').
Quitting (on error).
